openshift/prod-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruokasovellus-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ruokasovellus-prod
  template:
    metadata:
      labels:
        name: ruokasovellus-prod
    spec:
      containers:
        - name: ruokasovellus
          image: image-registry.openshift-image-registry.svc:5000/ruokasovellus/ruokasovellus:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
          startupProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 2
            timeoutSeconds: 1
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: 40Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
  revisionHistoryLimit: 2
