openshift/db-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruokasovellus-db-staging
spec:
  selector:
    matchLabels:
      app: ruokasovellus-db-staging
  template:
    metadata:
      labels:
        app: ruokasovellus-db-staging
    spec:
      containers:
      - name: ruokasovellus-db
        image: docker.io/library/postgres:16
        resources:
          requests:
            memory: 30Mi
            cpu: 50m
          limits:
            memory: 100Mi
            cpu: 100m
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: ruokasovellus-db-staging-storage
            mountPath: /var/lib/postgresql
      volumes:
        - name: ruokasovellus-db-staging-storage
          persistentVolumeClaim:
            claimName: ruokasovellus-db-pvc-2
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  triggers:
    - type: ConfigChange

---

apiVersion: v1
kind: Service
metadata:
  name: ruokasovellus-db-staging-service
spec:
  selector:
    app: ruokasovellus-db-staging
  ports:
  - port: 5432
    targetPort: 5432
