openshift/service.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: ruokasovellus
    application: ruokasovellus
  name: ruokasovellus
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: ruokasovellus
