openshift/prod-route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ruokasovellus-route-prod
spec:
  host: ruokasovellus.2.rahtiapp.fi
  to:
    kind: Service
    name: ruokasovellus-prod-service
  port:
    targetPort: 8080
