openshift/prod-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ruokasovellus-prod-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: ruokasovellus-prod

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ruokasovellus-route-prod
spec:
  host: ruokasovellus.2.rahtiapp.fi
  to:
    kind: Service
    name: ruokasovellus-prod-service
  port:
    targetPort: 8080
