openshift/staging-route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ruokasovellus-route-staging
spec:
  host: ruokasovellus-staging.2.rahtiapp.fi
  to:
    kind: Service
    name: ruokasovellus-staging-service
  port:
    targetPort: 8080
