openshift/staging-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ruokasovellus-staging-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: ruokasovellus-staging

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ruokasovellus-route-staging
spec:
  host: ruokasovellus-staging.2.rahtiapp.fi
  to:
    kind: Service
    name: ruokasovellus-staging-service
  port:
    targetPort: 8080
